objects/CMPL123__X123_Report_Section__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Fields__c</fullName>
        <description>Related Fields</description>
        <inlineHelpText>Related Fields</inlineHelpText>
        <label>Fields</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Order__c</fullName>
        <description>Section Order</description>
        <inlineHelpText>Section Order</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123__Relationship_Name__c</fullName>
        <description>Relationship Name</description>
        <label>Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Report_Section_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Report Section External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Report_Template__c</fullName>
        <description>Report Template</description>
        <label>Report Template</label>
        <referenceTo>CMPL123__X123_Report_Template__c</referenceTo>
        <relationshipName>Report_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CMPL123__Show_Border__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show related list table border</description>
        <label>Show Border</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Show_Section_Header__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Section Header</description>
        <inlineHelpText>Show Section Header</inlineHelpText>
        <label>Show Section Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Type__c</fullName>
        <description>Section/Related List</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Section</fullName>
                </value>
                <value>
                    <fullName>Related List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Report Template Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Template Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>